Fix vertical alignment.

--- a/horde/themes/default/screen.css
+++ b/horde/themes/default/screen.css
@@ -1967,7 +1967,7 @@ left.horde-point-right{
     display: inline-block;
     height: 20px;
     margin: 2px 8px 0 10px;
-    vertical-align: sub;
+    vertical-align: middle;
     width: 20px;
 }
 .horde-subnavi-point {
